RESOLVED FIXED143141
Only do the Connection::setShouldCloseConnectionOnMachExceptions() hack where necessary
https://bugs.webkit.org/show_bug.cgi?id=143141
Summary Only do the Connection::setShouldCloseConnectionOnMachExceptions() hack where...
Anders Carlsson
Reported 2015-03-27 12:12:04 PDT
Only do the Connection::setShouldCloseConnectionOnMachExceptions() hack where necessary
Attachments
Patch (5.39 KB, patch)
2015-03-27 12:14 PDT, Anders Carlsson
kling: review+
Anders Carlsson
Comment 1 2015-03-27 12:14:42 PDT
Andreas Kling
Comment 2 2015-03-27 14:48:37 PDT
Comment on attachment 249595 [details] Patch OK
Anders Carlsson
Comment 3 2015-03-27 15:08:32 PDT
Note You need to log in before you can comment on or make changes to this bug.