Only do the Connection::setShouldCloseConnectionOnMachExceptions() hack where necessary https://bugs.webkit.org/show_bug.cgi?id=143141 rdar://problem/19471284

Reviewed by Andreas Kling.

* Platform/IPC/Connection.h:
* Platform/IPC/mac/ConnectionMac.mm:
(IPC::Connection::platformInvalidate):
(IPC::Connection::platformInitialize):
(IPC::Connection::open):
* Shared/ChildProcessProxy.cpp:
(WebKit::ChildProcessProxy::didFinishLaunching):
* UIProcess/Plugins/PluginProcessProxy.cpp:
(WebKit::PluginProcessProxy::didFinishLaunching):

Canonical link: https://commits.webkit.org/161186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182086 268f45cc-cd09-0410-ab3c-d52691b4dbfc